plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.skala'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
//	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//h2
	runtimeOnly 'com.h2database:h2'

	//mysql
//	implementation 'com.mysql:mysql-connector-j'

	//mariadb
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'

	// swagger-ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	//actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	//mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//엑셀 파일
	implementation 'org.apache.poi:poi-ooxml:5.2.4'
	implementation 'org.apache.poi:poi-scratchpad:5.2.4'

	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework:spring-aspects'

	// envers
	implementation 'org.hibernate:hibernate-envers:6.4.4.Final'

	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}